--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,6 @@
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
-        <!-- Add jMetal dependency -->
         <dependency>
             <groupId>org.uma.jmetal</groupId>
             <artifactId>jmetal-core</artifactId>
@@ -38,6 +37,14 @@
             <version>1.5.2</version>
             <scope>system</scope>
             <systemPath>${pom.basedir}/jgrapht/jgrapht-core/target/jgrapht-core-1.5.3-SNAPSHOT.jar</systemPath>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jgrapht</groupId>
+            <artifactId>jgrapht-io</artifactId>
+            <version>1.5.2</version>
+            <scope>system</scope>
+            <systemPath>${pom.basedir}/jgrapht/jgrapht-io/target/jgrapht-io-1.5.3-SNAPSHOT.jar</systemPath>
         </dependency>
     </dependencies>
 
